# APPC_term_project

./: CMakeLists.txt
data/shaders/: body.frag  body.vert  skybox.vert
data/textures/: LICENSE.txt
src/: Camera.cpp  Camera.h  Context.cpp  Context.h  Cubemap.cpp  Cubemap.h  Image.cpp  Image.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Shader.cpp  Shader.h  ShaderMan.cpp  ShaderMan.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowCallback.cpp  WindowCallback.h  debug.cpp  debug.h  error.cpp  error.h  glfw.h  main.cpp  meshgen.cpp  meshgen.h  nocopylazy.cpp  nocopylazy.h  opengl.h
src/sim/: Body.cpp  Body.h  Planet.cpp  Planet.h  Simulation.cpp  Simulation.h  constants.h
